<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fab_margin_8"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/imgktxbk"/>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:textColorHint="@android:color/darker_gray"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="@android:color/darker_gray"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_sign_in"
        android:theme="@style/ThemeOverlay.MyDarkButton"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin_8">
        <CheckBox
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_toRightOf="@+id/remember"
            android:layout_toEndOf="@+id/remember" />
        <com.example.minhnhi.quanlyktx.utils.LinkText
            android:layout_marginTop="3dp"
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textStyle="italic"
            android:linksClickable="true"/>
    </RelativeLayout>

    <View
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"/>

    <TextView
        android:layout_marginTop="@dimen/fab_margin_8"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_info"/>
</LinearLayout>